2004-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl:       Applied fix for bug #1018934 "incorrectly
	                 detecting query as a reverse lookup"

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-07-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* spf.test:      Added lots of macro tests and fixed some bugs
	* spf.tcl:       that this revealed.

2004-07-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* spf.tcl:       Updated to draft-ietf-marid-protocol-00 document.
	* spf.test:      Fully implements section 7 macro expansion.

2004-07-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* spf.tcl:       Use ip package and implemented IPv6 type.

	* dns.tcl:       Added support for IPv6 lookups (type AAAA).

	* ip.tcl:        NEW: IP address package
	* ip.test:       tests (ipv4 and ipv6)
	* tcllib_ip.man: Manual page

2004-06-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* spf.tcl:      NEW: Implementation of SPF using our dns package.
	* spf.test:     NEW: tests for SPF package.
	* pkgIndex.tcl: Updated to include SPF.

	* dns-url.txt: Updated the dns-url document to -09 version. This
	implementation is still valid so no changes to the uri code.

2004-05-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Fix issue setting the log level properly.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-01-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Added automatic recognition of reverse lookups (where
	query is 1.2.3.4). These are converted to in-addr.arpa lookups.
	Added a dns::result to return the whole decoded answer record.
	Added SPF record type (an alias for TXT).